--- a/python/hw_sim_fwk/requirements.txt
+++ b/python/hw_sim_fwk/requirements.txt
@@ -1,5 +1,6 @@
-pywin32==304
-playsound==1.2.2
-dataclasses==0.6
+psutil==5.9.1
 oclock==1.3.0
+playsound==1.2.2
+pywin32==304
+dataclasses==0.6
 PyQt5==5.15.7
